--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=LiterAlura
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/literatura_alura
+spring.datasource.username=${DB_USER}
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.format-sql = true
